chore: fix letter case
