# backend/api/rest/openapi.yaml
@@ -57,7 +57,12 @@ paths:
       requestBody:
         $ref: "#/components/requestBodies/FindUser"
       parameters:
-        - $ref: "#/components/parameters/ExpenseId"
+        - name: expense_id
+          in: path
+          required: true
+          schema:
+            type: integer
+            example: 1
       responses:
         "200":
           description: The requested expense entry
@@ -76,7 +81,12 @@ paths:
       requestBody:
         $ref: "#/components/requestBodies/NewExpense"
       parameters:
-        - $ref: "#/components/parameters/ExpenseId"
+        - name: expense_id
+          in: path
+          required: true
+          schema:
+            type: integer
+            example: 1
       responses:
         "204":
           description: Expense entry updated successfully
@@ -91,7 +101,12 @@ paths:
       requestBody:
         $ref: "#/components/requestBodies/FindUser"
       parameters:
-        - $ref: "#/components/parameters/ExpenseId"
+        - name: expense_id
+          in: path
+          required: true
+          schema:
+            type: integer
+            example: 1
       responses:
         "204":
           description: Expense entry deleted successfully
@@ -136,7 +151,12 @@ paths:
       summary: Get an user entry by ID
       tags: ["user"]
       parameters:
-        - $ref: "#/components/parameters/UserId"
+        - name: user_id
+          in: path
+          required: true
+          schema:
+            type: integer
+            example: 1
       responses:
         "200":
           description: The requested user entry
@@ -149,28 +169,38 @@ paths:
         "503":
           $ref: "#/components/responses/503_ServiceUnavailable"
     put:
-      summary: Update an expense entry by ID
+      summary: Update an user entry by ID
       tags: ["user"]
       requestBody:
         $ref: "#/components/requestBodies/NewUser"
       parameters:
-        - $ref: "#/components/parameters/UserId"
+        - name: user_id
+          in: path
+          required: true
+          schema:
+            type: integer
+            example: 1
       responses:
         "204":
-          description: Expense entry deleted successfully
+          description: User entry deleted successfully
         "404":
           $ref: "#/components/responses/404_NotFound"
         "503":
           $ref: "#/components/responses/503_ServiceUnavailable"
 
     delete:
-      summary: Delete an expense entry by ID
+      summary: Delete an user entry by ID
       tags: ["user"]
       parameters:
-        - $ref: "#/components/parameters/UserId"
+        - name: user_id
+          in: path
+          required: true
+          schema:
+            type: integer
+            example: 1
       responses:
         "204":
-          description: Expense entry deleted successfully
+          description: User entry deleted successfully
         "404":
           $ref: "#/components/responses/404_NotFound"
         "503":
@@ -186,7 +216,7 @@ components:
         id: { type: integer, example: 1 }
         title: { type: string, example: payment }
         price: { type: integer, example: 100 }
-        user_id: { type: integer, example: 1 }
+        userId: { type: integer, example: 1 }
     Expenses:
       type: array
       items:
@@ -236,14 +266,16 @@ components:
       name: expense_id
       in: path
       required: true
-      schema: { type:integer, example: 1 }
-      example: 1
+      schema:
+        type: integer
+        example: 1
     UserId:
       name: user_id
       in: path
       required: true
-      schema: { type:integer, example: 1 }
-      example: 1
+      schema:
+        type: integer
+        example: 1
 
   requestBodies:
     NewUser:
@@ -273,7 +305,7 @@ components:
             properties:
               title: { type: string, example: "payment" }
               price: { type: integer, example: "100" }
-              user_id: { type: integer, "1" }
+              userId: { type: integer, "1" }
             # date:
             #   type: string
             #   format: date
